--- a/src/connector/Sneezer.form
+++ b/src/connector/Sneezer.form
@@ -163,7 +163,7 @@
     </Component>
     <Component class="javax.swing.JCheckBox" name="jCheckBox8">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Soar Throat"/>
+        <Property name="text" type="java.lang.String" value="Sore Throat"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCheckBox8ActionPerformed"/>
